configurationengine/source/scripts/tests/testdata/validate/project/assets/invalid/confml/invalid_type.confml
<?xml version="1.0" encoding="UTF-8"?>
<confml:configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:confml="http://www.s60.com/xml/confml/2" xsi:schemaLocation="http://www.s60.com/xml/confml/2 http://www.s60.com/xml/confml/1#//confml2" name="Invalid type test">
  <confml:feature ref="InvalidTypeTest" name="Invalid type test">
    <confml:setting ref="TestSetting" name="Test setting" type="invalid_type"/>
  </confml:feature>
  <confml:data>
    <confml:InvalidTypeTest>
      <confml:TestSetting>test</confml:TestSetting>
    </confml:InvalidTypeTest>
  </confml:data>
</confml:configuration>
